--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "coffee-script": ">= 1.6.2",
-    "follow-redirects": ">= 0.0.3"
+    "follow-redirects": ">= 0.0.3",
+    "cheerio": ">= 0.12.0"
   },
   "devDependencies": {
   },
