--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "coffee-script": ">= 1.6.2",
     "follow-redirects": ">= 0.0.3",
-    "cheerio": ">= 0.12.0"
+    "cheerio": ">= 0.12.0",
+    "imageinfo": ">= 1.0.4",
+    "request": ">= 2.21.0"
   },
   "devDependencies": {
   },
