--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "coffee-script": ">= 1.6.2",
     "cheerio": ">= 0.12.0",
     "imageinfo": ">= 1.0.4",
-    "request": ">= 2.21.0"
+    "request": ">= 2.21.0",
+    "nomnom": ">= 1.6.1"
   },
   "devDependencies": {
   },
